--- a/kasper/css-files/kasper.css
+++ b/kasper/css-files/kasper.css
@@ -547,12 +547,14 @@ header .container {
 .landing-2 .container .color p button {
     font-size: 15px;
     margin: 30px 0px 50px;
-    padding: 10px 15px;
+    border:none;
     background-color: black;
 }
 
 .landing-2 .container .color p button a {
     color: white;
+    display:block;
+    padding:12px 17px;
     text-decoration: none;
 }
 
