--- a/kasper/css-files/kasper.css
+++ b/kasper/css-files/kasper.css
@@ -495,6 +495,9 @@ header .container {
     cursor: pointer;
     padding: 15px 20px;
     color: white;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
     width: fit-content;
     margin: 30px auto;
 }
@@ -1110,8 +1113,29 @@ header .container {
 
 button:hover,
 #btn:hover {
-    background-color: #777;
     cursor: pointer;
+}
+
+
+.pricing .container .prices~button::before,
+.portfolio .contain .more::before,
+.contact>button::before {
+    content: "";
+    position: absolute;
+    right: 100%;
+    z-index: -1;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    transition: 0.3s ease-out;
+}
+
+.pricing .container .prices~button:hover::before,
+.portfolio .contain .more:hover::before,
+.contact>button:hover::before {
+    right: 0%;
+    top: 0px;
 }
 
 .pricing .container .prices~p:first-of-type {
@@ -1122,6 +1146,9 @@ button:hover,
 
 .pricing .container .prices~button {
     color: white;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
     background-color: #19c8fa;
     border: none;
     cursor: pointer;
@@ -1129,6 +1156,7 @@ button:hover,
     height: 50px;
     font-size: 16px;
     margin: 0px 0px 40px calc(50% - 70px);
+    transition: 0.3s;
 }
 
 .pricing .footer .container {
@@ -1139,6 +1167,7 @@ button:hover,
 
 .pricing .footer .container form {
     border: 1px white solid;
+    overflow: hidden;
     height: fit-content;
     max-width: 100%;
     position: relative;
@@ -1176,12 +1205,20 @@ button:hover,
 .pricing .footer .container #btn {
     margin: 0px;
     border: none;
+    position: relative;
     width: 130px;
+    z-index: 1;
+    overflow: hidden;
     background-color: #19c8fa;
     color: white;
     cursor: pointer;
     font-size: 16px;
     padding: 0px 10px;
+    transition: 0.3s;
+}
+
+.pricing .footer .container #btn:hover {
+    background-color: #00264D;
 }
 
 .pricing .footer .container p {
@@ -1290,6 +1327,9 @@ button:hover,
     color: white;
     background-color: #19c8fa;
     border: none;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
     cursor: pointer;
     width: 150px;
     height: 60px;
